--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "GWAS tissue selection"
-output: html_document
+output:
+  html_document:
+    self_contained: false
 date: '2024-12-25'
-editor_options: 
-  chunk_output_type: console
 ---
 
 ```{r}
@@ -28,7 +28,7 @@ sample_size <- list("WBC-ieu-b-30" = 563946,
                     "BIP-ieu-b-5110" = 413466)
 ```
 
-```{r}
+```{r results='asis', echo=FALSE}
 output_tables <- lapply(names(sample_size), function(i) {
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E/", i, "/", i, ".param.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param, sample_size[[i]])
@@ -60,7 +60,7 @@ output_tables <- lapply(names(sample_size), function(i) {
 })
 ```
 
-```{r}
+```{r results='asis', echo=FALSE}
 for (table in output_tables) {
   print(table)
 }
