--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -4,7 +4,7 @@ output: html_document
 date: '2024-12-25'
 ---
 
-```{r results='asis', echo=F}
+```{r}
 sample_size <- list("WBC-ieu-b-30" = 563946,
                     "SBP-ukb-a-360" = 317754,
                     "LDL-ukb-d-30780_irnt" = 343621,
@@ -23,10 +23,16 @@ sample_size <- list("WBC-ieu-b-30" = 563946,
                     "T2D-panukb" = 418949,
                     "MDD-ieu-b-102" = 500199,
                     "BIP-ieu-b-5110" = 413466)
+```
 
-for(i in names(sample_size)){
+
+```{r}
+library(DT)
+# split iris by Species and generate a datatable for each species
+htmltools::tagList(
+  for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E/",i,"/",i,".param.RDS"))
-  ctwas_parameters <- ctwas:::summarize_param(param,376792)
+  ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
   prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability,ctwas_parameters$group_pve, c(ctwas_parameters$enrichment,1), param$group_pvalue))
   prop_h2g$V2 <- round(as.numeric(prop_h2g$V2),4)
   prop_h2g$V3 <- round(as.numeric(prop_h2g$V3),4)
@@ -35,7 +41,7 @@ for(i in names(sample_size)){
   prop_h2g <- prop_h2g[order(-prop_h2g$V2),]
   colnames(prop_h2g) <- c("group","%h2g","h2g","enrichment","pvalue")
   prop_h2g <- prop_h2g[prop_h2g$group!="SNP",]
-  print(i)
-  print(head(prop_h2g,10))
+  print(DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 10)))
 }
+)
 ```
