--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -23,14 +23,13 @@ sample_size <- list("WBC-ieu-b-30" = 563946,
                     "T2D-panukb" = 418949,
                     "MDD-ieu-b-102" = 500199,
                     "BIP-ieu-b-5110" = 413466)
+
+DT::datatable(matrix())
 ```
 
 
-```{r}
-library(DT)
-# split iris by Species and generate a datatable for each species
-htmltools::tagList(
-  for(i in names(sample_size)){
+```{r test, results='asis', echo = FALSE}
+for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E/",i,"/",i,".param.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
   prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability,ctwas_parameters$group_pve, c(ctwas_parameters$enrichment,1), param$group_pvalue))
@@ -41,7 +40,8 @@ htmltools::tagList(
   prop_h2g <- prop_h2g[order(-prop_h2g$V2),]
   colnames(prop_h2g) <- c("group","%h2g","h2g","enrichment","pvalue")
   prop_h2g <- prop_h2g[prop_h2g$group!="SNP",]
-  print(DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 10)))
+  cat("\n\n")
+  cat(knitr::knit_print(DT::datatable(prop_h2g, options = list(pageLength =10))))
+  cat("\n\n")
 }
-)
 ```
