--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -38,6 +38,8 @@ for(i in names(sample_size)){
   prop_h2g <- prop_h2g[order(-prop_h2g$V2),]
   colnames(prop_h2g) <- c("group","%h2g","h2g","enrichment","pvalue")
   prop_h2g <- prop_h2g[prop_h2g$group!="SNP",]
-  cat(knitr::knit_print(DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'font-size: 500px; aption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 10))))
+  cat("\n\n")
+  cat(knitr::knit_print(DT::datatable(prop_h2g, caption = htmltools::tags$caption( style = 'font-size: 16px; caption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 7))))
+  cat("\n\n")
 }
 ```
