--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -4,7 +4,7 @@ output: html_document
 date: '2024-12-25'
 ---
 
-```{r}
+```{r, results='asis', echo = FALSE, results='hide'}
 sample_size <- list("WBC-ieu-b-30" = 563946,
                     "SBP-ukb-a-360" = 317754,
                     "LDL-ukb-d-30780_irnt" = 343621,
@@ -40,7 +40,7 @@ for(i in names(sample_size)){
   colnames(prop_h2g) <- c("group","%h2g","h2g","enrichment","pvalue")
   prop_h2g <- prop_h2g[prop_h2g$group!="SNP",]
   cat("\n\n")
-  cat(knitr::knit_print(DT::datatable(prop_h2g, caption = htmltools::tags$caption( style = 'font-size: 16px; caption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 7))))
+  cat(knitr::knit_print(DT::datatable(prop_h2g, caption = htmltools::tags$caption( style = 'font-size: 160px; caption-side: topleft; text-align = left; color:black;',i),options = list(pageLength = 7))))
   cat("\n\n")
 }
 ```
