--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -4,7 +4,7 @@ output: html_document
 date: '2024-12-25'
 ---
 
-```{r, results='asis', echo = FALSE, results='hide'}
+```{r, results='asis', echo = FALSE}
 sample_size <- list("WBC-ieu-b-30" = 563946,
                     "SBP-ukb-a-360" = 317754,
                     "LDL-ukb-d-30780_irnt" = 343621,
