--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -22,7 +22,11 @@ sample_size <- list("WBC-ieu-b-30" = 563946,
                     "ATH_gtexukb" = 337119,
                     "T2D-panukb" = 418949,
                     "MDD-ieu-b-102" = 500199,
-                    "BIP-ieu-b-5110" = 413466)
+                    "BIP-ieu-b-5110" = 413466,
+                    "ADHD-ieu-a-1183" = 55374,
+                    "ASD-ieu-a-1185" = 46351,
+                    "PD-ieu-b-7" = 482730,
+                    "NS-ukb-a-230" = 274108)
 DT::datatable(matrix())
 ```
 
